--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,9 +1,10 @@
 @charset "utf-8";
-@import "_vars.scss";
+@import './normalize.scss';
+@import "./_vars.scss";
 
 // Import only what you need from Bulma
 @import '../../node_modules/bulma';
-@import '../../node_modules/font-awesome/css/font-awesome.min.css';
+@import '../../node_modules/font-awesome/scss/font-awesome.scss';
 @import "node_modules/bulmaswatch/litera/bulmaswatch";
 @import  "_mixins";
 @import 'App.scss';
